seaqt/QtWidgets/gen_qfiledialog.h

class QDir;
class QFileDialog;
class QMetaObject;
class QUrl;
class QWidget;
typedef struct QActionEvent QActionEvent;
typedef struct QChildEvent QChildEvent;
typedef struct QDir QDir;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEvent QEvent;
typedef struct QFileDialog QFileDialog;
typedef struct QHideEvent QHideEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QMoveEvent QMoveEvent;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QTabletEvent QTabletEvent;
typedef struct QTimerEvent QTimerEvent;
typedef struct QUrl QUrl;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
bool QFileDialog_override_virtual_moveEvent(void* self, intptr_t slot);
void QFileDialog_virtualbase_moveEvent(void* self, QMoveEvent* event);
bool QFileDialog_override_virtual_tabletEvent(void* self, intptr_t slot);
void QFileDialog_virtualbase_tabletEvent(void* self, QTabletEvent* event);
bool QFileDialog_override_virtual_actionEvent(void* self, intptr_t slot);
void QFileDialog_virtualbase_actionEvent(void* self, QActionEvent* event);
bool QFileDialog_override_virtual_dragEnterEvent(void* self, intptr_t slot);
void QFileDialog_virtualbase_dragEnterEvent(void* self, QDragEnterEvent* event);
bool QFileDialog_override_virtual_dragMoveEvent(void* self, intptr_t slot);
void QFileDialog_virtualbase_dragMoveEvent(void* self, QDragMoveEvent* event);
bool QFileDialog_override_virtual_dragLeaveEvent(void* self, intptr_t slot);
void QFileDialog_virtualbase_dragLeaveEvent(void* self, QDragLeaveEvent* event);
bool QFileDialog_override_virtual_dropEvent(void* self, intptr_t slot);
void QFileDialog_virtualbase_dropEvent(void* self, QDropEvent* event);
bool QFileDialog_override_virtual_hideEvent(void* self, intptr_t slot);
void QFileDialog_virtualbase_hideEvent(void* self, QHideEvent* event);
bool QFileDialog_override_virtual_nativeEvent(void* self, intptr_t slot);
bool QFileDialog_virtualbase_nativeEvent(void* self, struct miqt_string eventType, void* message, intptr_t* result);
bool QFileDialog_override_virtual_metric(void* self, intptr_t slot);
int QFileDialog_virtualbase_metric(const void* self, int param1);
bool QFileDialog_override_virtual_initPainter(void* self, intptr_t slot);
void QFileDialog_virtualbase_initPainter(const void* self, QPainter* painter);
bool QFileDialog_override_virtual_redirected(void* self, intptr_t slot);
QPaintDevice* QFileDialog_virtualbase_redirected(const void* self, QPoint* offset);
bool QFileDialog_override_virtual_sharedPainter(void* self, intptr_t slot);
QPainter* QFileDialog_virtualbase_sharedPainter(const void* self);
bool QFileDialog_override_virtual_inputMethodEvent(void* self, intptr_t slot);
void QFileDialog_virtualbase_inputMethodEvent(void* self, QInputMethodEvent* param1);
bool QFileDialog_override_virtual_inputMethodQuery(void* self, intptr_t slot);
QVariant* QFileDialog_virtualbase_inputMethodQuery(const void* self, int param1);
bool QFileDialog_override_virtual_focusNextPrevChild(void* self, intptr_t slot);
bool QFileDialog_virtualbase_focusNextPrevChild(void* self, bool next);
bool QFileDialog_override_virtual_timerEvent(void* self, intptr_t slot);
void QFileDialog_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QFileDialog_override_virtual_childEvent(void* self, intptr_t slot);
void QFileDialog_virtualbase_childEvent(void* self, QChildEvent* event);
bool QFileDialog_override_virtual_customEvent(void* self, intptr_t slot);
void QFileDialog_virtualbase_customEvent(void* self, QEvent* event);
bool QFileDialog_override_virtual_connectNotify(void* self, intptr_t slot);
void QFileDialog_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QFileDialog_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QFileDialog_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QFileDialog_staticMetaObject();
void QFileDialog_delete(QFileDialog* self);